--- a/src/pages/Item/New/item-new.scss
+++ b/src/pages/Item/New/item-new.scss
@@ -73,68 +73,78 @@
       height: 42px;
     }
   }
-  
-  @media (min-width: 1200px) {
-    .form {
-      width: 1200px;
-      margin: 0 auto;
-  
-      .left-side {
-        float: left;
-        width: 30%;
+}
+
+@media (max-width: 480px) {
+  .form {
+    .right-side {
+      .description {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .form {
+    width: 1200px;
+    margin: 0 auto;
+
+    .left-side {
+      float: left;
+      width: 30%;
+    }
+
+    .right-side {
+      float: right;
+      width: 67%;
+      margin-bottom: 135px;
+
+      .input {
+        width: 70%;
       }
   
-      .right-side {
-        float: right;
-        width: 67%;
-        margin-bottom: 135px;
-
-        .input {
-          width: 70%;
+      .description {
+        padding: 15px 0 0 20px;
+        width: 70%;
+      }
+  
+      .images {
+        width: 73%;
+        margin-bottom: 10px;
+  
+        .label-for-images {
+          height: 167px;
+          width: 167px;
+          line-height: 164px;
         }
-    
-        .description {
-          padding: 15px 0 0 20px;
-          width: 70%;
+      }
+  
+      .contacts-block {
+        width: 70%;
+        
+        .phone,
+        .contact-name {
+          display: inline-block;
         }
-    
-        .images {
-          width: 73%;
-          margin-bottom: 10px;
-    
-          .label-for-images {
-            height: 167px;
-            width: 167px;
-            line-height: 164px;
-          }
+      }
+  
+      .price-block {
+        width: 38%;
+  
+        .price {
+          width: 145px;
         }
-    
-        .contacts-block {
-          width: 70%;
-          
-          .phone,
-          .contact-name {
-            display: inline-block;
-          }
+  
+        .currency {
+          width: 143px;
+          margin: 0;
         }
-    
-        .price-block {
-          width: 38%;
-    
-          .price {
-            width: 145px;
-          }
-    
-          .currency {
-            width: 143px;
-            margin: 0;
-          }
-        }
-    
-        .post-button {
-          display: block;
-          float: left;
-        }
+      }
+  
+      .post-button {
+        display: block;
+        float: left;
       }
     }
   }
